--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <modelVersion>4.0.0</modelVersion>
+    
 	<groupId>com.blackducksoftware</groupId>
     <artifactId>ducky-crm</artifactId>
-    <version>0.1.0</version>
+    <version>0.2.0</version>
 
 	<packaging>war</packaging>
 	
@@ -20,6 +21,8 @@
     </properties>
 
     <dependencies>
+    
+    
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -39,6 +42,18 @@
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
         </dependency>
+        
+        <dependency>
+		    <groupId>org.apache.struts</groupId>
+		    <artifactId>struts2-core</artifactId>
+		    <version>2.3.7</version>
+		    <exclusions>
+		        <exclusion>
+		            <artifactId>javassist</artifactId>
+		            <groupId>javassist</groupId>
+		        </exclusion>
+		    </exclusions>
+		</dependency>
 
 
         <dependency>
