--- a/polaris.yml
+++ b/polaris.yml
@@ -3,8 +3,8 @@ install:
   coverity:
     version: latest
 project:
-  name: xenserverarmy/ducky-crm
-  branch: origin/master
+  name: "xenserverarmy/ducky-crm/"
+  branch: "origin/master"
   revision:
     name: "ducky-crm-ebc"
     date: "2019-07-18T13:25:30Z"
