--- a/polaris.yml
+++ b/polaris.yml
@@ -8,8 +8,8 @@ project:
   revision:
     name: "ducky-crm-ebc"
     date: "2019-07-18T13:25:30Z"
-  projectDir: /var/lib/jenkins/jobs/mvn-ducky/workspace
-  captureDir: /var/lib/jenkins/jobs/mvn-ducky/workspace/.synopsys/polaris
+  projectDir: .
+  captureDir: .synopsys/polaris
 capture:
   coverity:
     buildless:
