--- a/SecurityManifest.yml
+++ b/SecurityManifest.yml
@@ -3,40 +3,12 @@ security:
   pipeline:
     type: "csf"
     toolchain: "Hybrid"
-  sastScan:
-    enabled: false
-    rescanThreshold: 2
-  scaScan:
-    enabled: false
-    rescanThreshold: 3
-  imageScan:
-    enabled: false
-    rescanThreshold: 5
-  dastScan:
-    enabled: false
-    rescanThreshold: 3
-  sastPlusM: false
-  dastPlusM: false
-  
----
-buildBreaker:
-  coverity: 
-    statusQuery: "new"
-    overallSeverityQuery: "high"
-    categoryQuery: "cross-site scripting"
-    categorySeverityQuery: "medium"
-  blackduck:
-    statusQuery: "new"
-    overallSeverityQuery: "medium"
-    cveQuery: ""
-    componentQuery: ""
-  seeker:
-    statusQuery: "new"
-    overallSeverityQuery: "critical"
-    categoryQuery: "SQL Injection"
-    categorySeverityQuery: "high"
----
-sct:
-  enableJira: "false"
-  jiraIssueType: "Bug"
-  enableBuildBreaker: "false"
+  activities:
+    sast:
+      rescanThreshold: 2
+    sca:
+      rescanThreshold: 3
+    image:
+      rescanThreshold: 5
+    dast:
+      rescanThreshold: 3
