--- a/ApplicationManifest.yml
+++ b/ApplicationManifest.yml
@@ -12,7 +12,7 @@ application:
 environment:
   enableJira: false,
   enableScm: false,
-  scmOwner: "xenserverarmy",
-  scmRepositoryName: "ducky-crm",
-  scmBranchName: "master",
+  scmOwner: "xenserverarmy"
+  scmRepositoryName: "ducky-crm"
+  scmBranchName: "master"
   githubApiUrl: "https://api.github.com/repos/"
